# Whisper-free

./: .gitignore  CRITICAL_FIXES_2026-01-30.md  FEATURE_UPDATE_COMPLETE.md  FIXES_APPLIED.md  INSTALL_FFMPEG.md  INTEGRATION_EXAMPLE.py  MULTIPLE_FORMATS_SUMMARY.md  Makefile  PTT_INTERRUPTION_DEADLOCK_FIX.md  README.md  README_FILE_TRANSCRIPTION.md  TESTING_GUIDE.md  THREADING_FIX.md  VERIFICATION_REPORT.md  VISUAL_GUIDE.txt  check_code.py  demo_overlay.py  demo_ui.py  example_data_usage.py  install_and_test.sh  project-status.md  requirements.txt  test_features.py  verify_fix.py  verify_freeze_fix.py  verify_implementation.py  verify_start_fix.py
.claude/: settings.local.json
Plans/: audio-file-transcription-feature.md  kali-push-to-talk-dictation-design.md
app/: __init__.py  main.py
configs/: default_config.yaml
dynisland/dynisland-macro/: Cargo.toml
dynisland/dynisland-macro/src/: config.rs  lib.rs
dynisland/dynisland-macro/tests/: lib.rs
dynisland/dynisland-modules/power-module/: Cargo.toml  README.md  default.scss
dynisland/dynisland-modules/power-module/resources/: compact.ui  expanded.ui  minimal.ui  resources.gresource.xml
dynisland/dynisland-modules/power-module/src/: config.rs  lib.rs  module.rs
dynisland/dynisland-modules/power-module/src/upower/: device.rs  mod.rs
dynisland/dynisland-modules/power-module/src/upower/proxy/: device.rs  kbd_backlight.rs  mod.rs  upower.rs
dynisland/dynisland-modules/power-module/src/widget/: battery.rs  compact.rs  expanded.rs  graph.rs  minimal.rs  mod.rs
scripts/: whisper
tests/: test_basic.py  (+7 more)
(+52 files in other folders)
