[package]
name = "dynisland-macro"
authors = ["cr3eperall"]
description = "Procedural macros for dynisland-core"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/cr3eperall/dynisland-macro"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn ={ version = "2.0.77", features = ["extra-traits"] }
proc-macro2 = "1.0.86"
serde = { version = "1.0.0", features = ["serde_derive"] }

[dev-dependencies]
serde_json = "1.0.127"