[package]
name = "dynisland_power_module"
version = "0.1.0"
edition = "2021"
license = "mit"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynisland-core = { workspace=true, version="=0.1.3", features = ["macro"] }
tokio = { version = "1.46.0", features = [
    "rt",
    "time",
    "sync",
    "macros",
    "process",
] }
ron = "0.10.1"
pangocairo="0.19.8"
dyn-fmt="0.4.3"
serde_json = "1.0.127"
serde = { version = "1.0.188", features = ["serde_derive"] }
env_logger = "0.11.2"
abi_stable = "0.11.3"
grass = {version = "0.13.4", default-features = false, features = ["macro"]}
anyhow = "1.0.86"

zbus = "5.7.1"
chrono = "0.4.38"

[build-dependencies]
glib-build-tools = { version="0.20.0" }

[lib]
name = "power_module"

crate-type = ["cdylib", 'rlib']

[features]
embedded = []